--- a/e-commerce/pom.xml
+++ b/e-commerce/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>e-commerce</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>e-commerce</name>
-    <description>An e-commerce app</description>
+    <description>An E-commerce App</description>
     <properties>
         <java.version>18</java.version>
         <springfox.version>3.0.0</springfox.version>
