--- a/e-commerce/pom.xml
+++ b/e-commerce/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <java.version>18</java.version>
         <springfox.version>3.0.0</springfox.version>
+        <mysql.version>8.0.30</mysql.version>
     </properties>
     <dependencies>
         <dependency>
@@ -52,7 +53,11 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>javax.validation</groupId>
